@@ -3,7 +3,7 @@ Section: gnome
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: debhelper (>= 10),
+Build-Depends: debhelper (>= 10.3),
                gnome-pkg-tools,
                gtk-doc-tools,
                dh-exec,
