@@ -26,7 +26,10 @@ override_dh_autoreconf:
 
 override_dh_install:
 	find debian/tmp -type f -name '*.la' -delete -print
-	dh_install --fail-missing
+	dh_install
+
+override_dh_missing:
+	dh_missing --fail-missing
 
 override_dh_auto_test:
 # The tests are not fatal on non-linux architectures
